--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Authors@R:
     person("Andy", "South", email = "southandy@gmail.com", role = c("aut", "cre"),comment = c(ORCID = "0000-0003-4051-6135"))
     )
 Description: Extracts Myeloma abnormalities in cytogenetic FISH (Fluorescence in situ hybridization) strings.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
