--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/andysouth/fish4myeloma
 BugReports: https://github.com/andysouth/fish4myeloma/issues
+Imports: 
+    dplyr,
+    rlang,
+    stringr
