tweak dependencies to pass check for first time, woohoo !!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,14 @@ export(fish4del17p)
 export(fish4ighccnd1)
 export(fish4ighfgfr3)
 export(fish4ighmaf)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,rename_with)
+importFrom(dplyr,select)
+importFrom(dplyr,semi_join)
+importFrom(rlang,.data)
+importFrom(stringr,fixed)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_locate)
+importFrom(stringr,str_sub)
