--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fish4del17p)
 export(fish4ighccnd1)
 export(fish4ighfgfr3)
 export(fish4ighmaf)
+export(fishmloinc)
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -17,6 +18,7 @@ importFrom(rlang,.data)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_locate)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_sub)
 importFrom(tidyr,ends_with)
 importFrom(tidyr,pivot_longer)
